--- a/Termin02/02_Korrelation.ipynb
+++ b/Termin02/02_Korrelation.ipynb
@@ -29,7 +29,8 @@
     "Es wird eine Analyse der Korrelation von 'duration' und 'comments' durchgeführt.\n",
     "Zunächst werden die YouTube Daten bereinigt und als parquet-Datei exportiert.\n",
     "Anschließend werden die Merkmale in einen Dataframe geladen, in numerische Werte umgewandelt (wobei NaN-Werte entfernt werden) und mittels Scatter-Plot visualisiert.\n",
-    "Danach werden die Korrelationskoeffizienten mit den entsprechenden Methoden berechnet und die Analyse interpretiert."
+    "Danach wird der Korrelationskoeffizient berechnet und die Analyse interpretiert.\n",
+    "Es wird der Pearson-Korrelationskoeffizient gewählt, da die Werte beider Merkmale auf einer Verhältnisskala liegen."
    ],
    "metadata": {
     "collapsed": false
@@ -560,10 +561,8 @@
    "source": [
     "### Interpretation\n",
     "\n",
-    "- Der Pearson-Korrelationskoeffizient von -0,017 deutet auf eine extrem schwache negative lineare Korrelation zwischen Videodauer und Kommentaren hin. Der Wert liegt jedoch so nah an 0, dass man von keiner praktisch relevanten linearen Beziehung zwischen den beiden Variablen ausgehen kann.\n",
-    "- Der Kendall-Koeffizient von 0,043 misst die Rangkorrelation zwischen den Variablen. Auch dieser sehr geringe positive Wert bestätigt, dass praktisch keine monotone Beziehung vorliegt - längere Videos haben also nicht zwingend mehr oder weniger Kommentare als kürzere.\n",
-    "- Der Spearman-Koeffizient von 0,065 ist eine weitere Rangkorrelationsmaßzahl. Wie der Kendall-Koeffizient ist auch er positiv, aber nahe bei 0. Dies unterstreicht erneut den Mangel an einer systematischen Rangbeziehung.\n",
-    "Zusammengefasst deuten alle drei Korrelationskoeffizienten übereinstimmend auf eine äußerst schwache bis nicht vorhandene Beziehung zwischen Videodauer und Kommentarzahl hin - unabhängig davon, ob man eine lineare oder monotone Beziehung betrachtet."
+    "Der Pearson-Korrelationskoeffizient von -0,017 deutet auf eine extrem schwache negative lineare Korrelation zwischen Videodauer und Kommentaren hin. Der Wert liegt jedoch so nah an 0, dass man von keiner praktisch relevanten linearen Beziehung zwischen den beiden Variablen ausgehen kann.\n",
+    "Zusammengefasst deutet der Pearson Korrelationskoeffizient auf eine äußerst schwache bis nicht vorhandene Beziehung zwischen Videodauer und Kommentarzahl hin."
    ],
    "metadata": {
     "collapsed": false
