Termin04 Machine Learning angefangen

--- a/Termin04/adrian/04_Machine_Learning.ipynb
+++ b/Termin04/adrian/04_Machine_Learning.ipynb
@@ -77,17 +77,57 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-18T08:59:12.484819Z",
-     "start_time": "2024-06-18T08:59:12.482580Z"
+     "end_time": "2024-06-19T20:53:53.812580100Z",
+     "start_time": "2024-06-19T20:53:48.412221600Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "# TODO: Hier soll euer Code stehen."
+    "import numpy as np\n",
+    "from sklearn.datasets import fetch_openml\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import MinMaxScaler"
    ],
    "id": "aaddc29db1fe55e8",
    "outputs": [],
    "execution_count": 1
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [],
+   "source": [
+    "# MNIST DataSet laden\n",
+    "mnist = fetch_openml('mnist_784', version=1)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-06-19T20:54:08.701610900Z",
+     "start_time": "2024-06-19T20:53:55.294235700Z"
+    }
+   },
+   "id": "ca1505451ae8e84"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [],
+   "source": [
+    "# Extrahieren der Daten und Labels\n",
+    "X, y = mnist.data, mnist.target\n",
+    "\n",
+    "# Konvertieren der Labels zu integer (sie sind als Strings geladen)\n",
+    "y = y.astype(np.int8)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-06-19T21:12:27.866216100Z",
+     "start_time": "2024-06-19T21:12:27.845022200Z"
+    }
+   },
+   "id": "c97814bf5b1c4119"
   },
   {
    "metadata": {},
@@ -107,9 +147,7 @@
     }
    },
    "cell_type": "code",
-   "source": [
-    "# TODO: Hier soll euer Code stehen."
-   ],
+   "source": [],
    "id": "63e6c6122e72eea",
    "outputs": [],
    "execution_count": 2
