--- a/Termin04/adrian/04_Machine_Learning.ipynb
+++ b/Termin04/adrian/04_Machine_Learning.ipynb
@@ -447,17 +447,92 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-20T18:11:33.167250400Z",
-     "start_time": "2024-06-20T18:11:32.760913600Z"
+     "end_time": "2024-06-20T18:44:55.362469500Z",
+     "start_time": "2024-06-20T18:41:30.375959300Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "# TODO: Hier soll euer Code stehen."
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "# Trainieren des Modells\n",
+    "clf = DecisionTreeClassifier(random_state=0)\n",
+    "clf.fit(X_train_scaled, y_train)\n",
+    "cross_val_score(clf, X_train_scaled, y_train, cv=10)"
    ],
    "id": "278495ebbd240a05",
-   "outputs": [],
-   "execution_count": 11
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([0.87107143, 0.86482143, 0.86178571, 0.86625   , 0.87660714,\n       0.86089286, 0.87357143, 0.87214286, 0.87142857, 0.87017857])"
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 15
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Modellinformationen:\n",
+      "----------------------------------------------------------------------------------\n",
+      "Accuracy:                   0.8680\n",
+      "Criterion:                  gini\n",
+      "Tree:                       <sklearn.tree._tree.Tree object at 0x000001D66D5C2790>\n",
+      "CCP Alpha:                  0.0\n",
+      "Class Weight:               None\n",
+      "Classes:                    [0 1 2 3 4 5 6 7 8 9]\n",
+      "Max Depth:                  None\n",
+      "Max Features:               None\n",
+      "Max Leaf Nodes:             None\n",
+      "Min Samples Leaf:           1\n",
+      "Min Samples Split:          2\n",
+      "Min Impurity Decrease:      0.0\n",
+      "Splitter:                   best\n",
+      "Monotonic cst:              None\n",
+      "Random State:               0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluieren des Modells\n",
+    "y_pred = clf.predict(X_test_scaled)\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "\n",
+    "print(\"Modellinformationen:\")\n",
+    "print(\"----------------------------------------------------------------------------------\")\n",
+    "print(f\"Accuracy:                   {accuracy:.4f}\")\n",
+    "print(f\"Criterion:                  {clf.criterion}\")\n",
+    "print(f\"Tree:                       {clf.tree_}\")\n",
+    "print(f\"CCP Alpha:                  {clf.ccp_alpha}\")\n",
+    "print(f\"Class Weight:               {clf.class_weight}\")\n",
+    "print(f\"Classes:                    {clf.classes_}\")\n",
+    "print(f\"Max Depth:                  {clf.max_depth}\")\n",
+    "print(f\"Max Features:               {clf.max_features}\")\n",
+    "print(f\"Max Leaf Nodes:             {clf.max_leaf_nodes}\")\n",
+    "print(f\"Min Samples Leaf:           {clf.min_samples_leaf}\")\n",
+    "print(f\"Min Samples Split:          {clf.min_samples_split}\")\n",
+    "print(f\"Min Impurity Decrease:      {clf.min_impurity_decrease}\")\n",
+    "print(f\"Splitter:                   {clf.splitter}\")\n",
+    "print(f\"Monotonic cst:              {clf.monotonic_cst}\")\n",
+    "print(f\"Random State:               {clf.random_state}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-06-20T18:56:51.518500300Z",
+     "start_time": "2024-06-20T18:56:51.484608800Z"
+    }
+   },
+   "id": "25a6e86149323108"
   },
   {
    "metadata": {},
