Termin04 ML: Neural Net update

--- a/Termin04/adrian/04_Machine_Learning.ipynb
+++ b/Termin04/adrian/04_Machine_Learning.ipynb
@@ -77,8 +77,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-20T21:43:42.931364900Z",
-     "start_time": "2024-06-20T21:43:42.474329300Z"
+     "end_time": "2024-06-20T22:41:09.354351400Z",
+     "start_time": "2024-06-20T22:41:08.859947800Z"
     }
    },
    "cell_type": "code",
@@ -104,8 +104,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-06-20T21:43:48.094378200Z",
-     "start_time": "2024-06-20T21:43:42.931364900Z"
+     "end_time": "2024-06-20T22:41:14.537935300Z",
+     "start_time": "2024-06-20T22:41:09.357343900Z"
     }
    },
    "id": "ca1505451ae8e84"
@@ -149,8 +149,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-06-20T21:43:48.096373200Z",
-     "start_time": "2024-06-20T21:43:48.089386500Z"
+     "end_time": "2024-06-20T22:41:14.552983500Z",
+     "start_time": "2024-06-20T22:41:14.540783100Z"
     }
    },
    "id": "2e2c55b07d2e7fcf"
@@ -167,8 +167,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-06-20T21:43:48.217311600Z",
-     "start_time": "2024-06-20T21:43:48.095376900Z"
+     "end_time": "2024-06-20T22:41:14.653655900Z",
+     "start_time": "2024-06-20T22:41:14.547002Z"
     }
    },
    "id": "c97814bf5b1c4119"
@@ -186,8 +186,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-20T21:43:48.939036200Z",
-     "start_time": "2024-06-20T21:43:48.218308300Z"
+     "end_time": "2024-06-20T22:41:15.105692Z",
+     "start_time": "2024-06-20T22:41:14.657641700Z"
     }
    },
    "cell_type": "code",
@@ -223,8 +223,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-06-20T21:43:48.954222400Z",
-     "start_time": "2024-06-20T21:43:48.945019900Z"
+     "end_time": "2024-06-20T22:41:15.120516700Z",
+     "start_time": "2024-06-20T22:41:15.117518400Z"
     }
    },
    "id": "4e4a60eb19c45e6c"
@@ -270,8 +270,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-06-20T21:43:49.476371400Z",
-     "start_time": "2024-06-20T21:43:48.957216600Z"
+     "end_time": "2024-06-20T22:41:15.624185800Z",
+     "start_time": "2024-06-20T22:41:15.124505800Z"
     }
    },
    "id": "50757682f8b023e8"
@@ -279,8 +279,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-20T21:43:49.481984700Z",
-     "start_time": "2024-06-20T21:43:49.478366400Z"
+     "end_time": "2024-06-20T22:41:15.630169600Z",
+     "start_time": "2024-06-20T22:41:15.625183200Z"
     }
    },
    "cell_type": "code",
@@ -316,8 +316,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-20T21:43:50.044289200Z",
-     "start_time": "2024-06-20T21:43:49.484975300Z"
+     "end_time": "2024-06-20T22:41:16.044610400Z",
+     "start_time": "2024-06-20T22:41:15.631166200Z"
     }
    },
    "cell_type": "code",
@@ -394,8 +394,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-20T21:44:26.129236800Z",
-     "start_time": "2024-06-20T21:43:50.048277900Z"
+     "end_time": "2024-06-20T22:41:51.056761800Z",
+     "start_time": "2024-06-20T22:41:16.046606200Z"
     }
    },
    "cell_type": "code",
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
@@ -494,8 +494,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-06-20T21:55:56.647346200Z",
-     "start_time": "2024-06-20T21:55:56.551621200Z"
+     "end_time": "2024-06-20T22:41:51.170251300Z",
+     "start_time": "2024-06-20T22:41:51.065850Z"
     }
    },
    "id": "f07d2c77c7034876"
@@ -535,8 +535,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-20T21:47:57.161671500Z",
-     "start_time": "2024-06-20T21:44:26.262310900Z"
+     "end_time": "2024-06-20T22:45:18.120495500Z",
+     "start_time": "2024-06-20T22:41:51.168900700Z"
     }
    },
    "cell_type": "code",
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
@@ -575,7 +575,7 @@
       "----------------------------------------------------------------------------------\n",
       "Accuracy:                   0.8680\n",
       "Criterion:                  gini\n",
-      "Tree:                       <sklearn.tree._tree.Tree object at 0x0000026CA1B50C00>\n",
+      "Tree:                       <sklearn.tree._tree.Tree object at 0x000002AAA0CCEC60>\n",
       "CCP Alpha:                  0.0\n",
       "Class Weight:               None\n",
       "Classes:                    [0 1 2 3 4 5 6 7 8 9]\n",
@@ -619,8 +619,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-06-20T21:53:56.741414300Z",
-     "start_time": "2024-06-20T21:53:56.704873300Z"
+     "end_time": "2024-06-20T22:45:18.145963600Z",
+     "start_time": "2024-06-20T22:45:18.125219700Z"
     }
    },
    "id": "25a6e86149323108"
@@ -660,8 +660,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-20T21:48:00.808621300Z",
-     "start_time": "2024-06-20T21:47:57.196184900Z"
+     "end_time": "2024-06-20T22:45:22.130075700Z",
+     "start_time": "2024-06-20T22:45:18.151770Z"
     }
    },
    "cell_type": "code",
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "outputs": [
     {
      "name": "stdout",
@@ -737,8 +737,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-06-20T21:54:47.909198400Z",
-     "start_time": "2024-06-20T21:54:47.789296400Z"
+     "end_time": "2024-06-20T22:45:22.243731100Z",
+     "start_time": "2024-06-20T22:45:22.130996200Z"
     }
    },
    "id": "b847d4890de7ac"
@@ -756,8 +756,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-20T21:50:50.060348600Z",
-     "start_time": "2024-06-20T21:48:00.932098500Z"
+     "end_time": "2024-06-20T22:48:08.972477900Z",
+     "start_time": "2024-06-20T22:45:22.248021500Z"
     }
    },
    "cell_type": "code",
@@ -800,8 +800,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-06-20T21:50:50.069160800Z",
-     "start_time": "2024-06-20T21:50:50.065221900Z"
+     "end_time": "2024-06-20T22:48:08.991992800Z",
+     "start_time": "2024-06-20T22:48:08.977449600Z"
     }
    },
    "id": "aac0120ced7738d3"
@@ -817,8 +817,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-06-20T21:52:44.003156700Z",
-     "start_time": "2024-06-20T21:50:50.070215900Z"
+     "end_time": "2024-06-20T22:49:53.011991Z",
+     "start_time": "2024-06-20T22:48:08.985279Z"
     }
    },
    "id": "4af716d4e4a30e7d"
@@ -836,8 +836,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-20T22:26:19.714498100Z",
-     "start_time": "2024-06-20T22:26:07.860184600Z"
+     "end_time": "2024-06-20T22:50:03.177750700Z",
+     "start_time": "2024-06-20T22:49:53.025413700Z"
     }
    },
    "cell_type": "code",
@@ -851,11 +851,11 @@
    ],
    "id": "7873c66b5006f07f",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 19
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "outputs": [
     {
      "name": "stderr",
@@ -926,25 +926,34 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-06-20T22:26:25.719597500Z",
-     "start_time": "2024-06-20T22:26:25.523353100Z"
+     "end_time": "2024-06-20T22:50:03.326673200Z",
+     "start_time": "2024-06-20T22:50:03.182738Z"
     }
    },
    "id": "1ce6759f0e6f6527"
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'X_train_scaled' is not defined",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Exception encountered when calling Sequential.call().\n\n\u001B[1mInvalid input shape for input Tensor(\"data:0\", shape=(32, 784), dtype=float32). Expected shape (None, 28, 28), but input has incompatible shape (32, 784)\u001B[0m\n\nArguments received by Sequential.call():\n  • inputs=tf.Tensor(shape=(32, 784), dtype=float32)\n  • training=True\n  • mask=None",
      "output_type": "error",
      "traceback": [
       "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[4], line 2\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;66;03m# Modell trainieren\u001B[39;00m\n\u001B[1;32m----> 2\u001B[0m model\u001B[38;5;241m.\u001B[39mfit(\u001B[43mX_train_scaled\u001B[49m, tf\u001B[38;5;241m.\u001B[39mkeras\u001B[38;5;241m.\u001B[39mutils\u001B[38;5;241m.\u001B[39mto_categorical(y_train, \n\u001B[0;32m      3\u001B[0m                                                         num_classes\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m10\u001B[39m), \n\u001B[0;32m      4\u001B[0m           epochs\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m10\u001B[39m, \n\u001B[0;32m      5\u001B[0m           validation_data\u001B[38;5;241m=\u001B[39m(X_test_scaled, tf\u001B[38;5;241m.\u001B[39mkeras\u001B[38;5;241m.\u001B[39mutils\u001B[38;5;241m.\u001B[39mto_categorical(y_test, \n\u001B[0;32m      6\u001B[0m                                                                         num_classes\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m10\u001B[39m)))\n",
-      "\u001B[1;31mNameError\u001B[0m: name 'X_train_scaled' is not defined"
+      "\u001B[1;31mValueError\u001B[0m                                Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[21], line 2\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;66;03m# Modell trainieren\u001B[39;00m\n\u001B[1;32m----> 2\u001B[0m \u001B[43mmodel\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mfit\u001B[49m\u001B[43m(\u001B[49m\u001B[43mX_train_scaled\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mtf\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mkeras\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mutils\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mto_categorical\u001B[49m\u001B[43m(\u001B[49m\u001B[43my_train\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\n\u001B[0;32m      3\u001B[0m \u001B[43m                                                        \u001B[49m\u001B[43mnum_classes\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;241;43m10\u001B[39;49m\u001B[43m)\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\n\u001B[0;32m      4\u001B[0m \u001B[43m          \u001B[49m\u001B[43mepochs\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;241;43m10\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\n\u001B[0;32m      5\u001B[0m \u001B[43m          \u001B[49m\u001B[43mvalidation_data\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43mX_test_scaled\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mtf\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mkeras\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mutils\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mto_categorical\u001B[49m\u001B[43m(\u001B[49m\u001B[43my_test\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\n\u001B[0;32m      6\u001B[0m \u001B[43m                                                                        \u001B[49m\u001B[43mnum_classes\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;241;43m10\u001B[39;49m\u001B[43m)\u001B[49m\u001B[43m)\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[1;32m~\\Documents\\CODE\\DataScience\\venv\\Lib\\site-packages\\keras\\src\\utils\\traceback_utils.py:122\u001B[0m, in \u001B[0;36mfilter_traceback.<locals>.error_handler\u001B[1;34m(*args, **kwargs)\u001B[0m\n\u001B[0;32m    119\u001B[0m     filtered_tb \u001B[38;5;241m=\u001B[39m _process_traceback_frames(e\u001B[38;5;241m.\u001B[39m__traceback__)\n\u001B[0;32m    120\u001B[0m     \u001B[38;5;66;03m# To get the full stack trace, call:\u001B[39;00m\n\u001B[0;32m    121\u001B[0m     \u001B[38;5;66;03m# `keras.config.disable_traceback_filtering()`\u001B[39;00m\n\u001B[1;32m--> 122\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m e\u001B[38;5;241m.\u001B[39mwith_traceback(filtered_tb) \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m\n\u001B[0;32m    123\u001B[0m \u001B[38;5;28;01mfinally\u001B[39;00m:\n\u001B[0;32m    124\u001B[0m     \u001B[38;5;28;01mdel\u001B[39;00m filtered_tb\n",
+      "File \u001B[1;32m~\\Documents\\CODE\\DataScience\\venv\\Lib\\site-packages\\keras\\src\\models\\functional.py:288\u001B[0m, in \u001B[0;36mFunctional._adjust_input_rank\u001B[1;34m(self, flat_inputs)\u001B[0m\n\u001B[0;32m    286\u001B[0m             adjusted\u001B[38;5;241m.\u001B[39mappend(ops\u001B[38;5;241m.\u001B[39mexpand_dims(x, axis\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m-\u001B[39m\u001B[38;5;241m1\u001B[39m))\n\u001B[0;32m    287\u001B[0m             \u001B[38;5;28;01mcontinue\u001B[39;00m\n\u001B[1;32m--> 288\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mValueError\u001B[39;00m(\n\u001B[0;32m    289\u001B[0m         \u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mInvalid input shape for input \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mx\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m. Expected shape \u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m    290\u001B[0m         \u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mref_shape\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m, but input has incompatible shape \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mx\u001B[38;5;241m.\u001B[39mshape\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m    291\u001B[0m     )\n\u001B[0;32m    292\u001B[0m \u001B[38;5;66;03m# Add back metadata.\u001B[39;00m\n\u001B[0;32m    293\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;28mlen\u001B[39m(flat_inputs)):\n",
+      "\u001B[1;31mValueError\u001B[0m: Exception encountered when calling Sequential.call().\n\n\u001B[1mInvalid input shape for input Tensor(\"data:0\", shape=(32, 784), dtype=float32). Expected shape (None, 28, 28), but input has incompatible shape (32, 784)\u001B[0m\n\nArguments received by Sequential.call():\n  • inputs=tf.Tensor(shape=(32, 784), dtype=float32)\n  • training=True\n  • mask=None"
      ]
     }
    ],
@@ -959,8 +968,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-06-20T22:38:09.719237300Z",
-     "start_time": "2024-06-20T22:38:09.686011Z"
+     "end_time": "2024-06-20T22:50:05.949124400Z",
+     "start_time": "2024-06-20T22:50:03.316701500Z"
     }
    },
    "id": "62ade9bdd84dd92f"
@@ -978,8 +987,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-20T21:52:44.027007500Z",
-     "start_time": "2024-06-20T21:52:44.010156800Z"
+     "end_time": "2024-06-20T22:50:05.952116100Z",
+     "start_time": "2024-06-20T22:50:05.950461100Z"
     }
    },
    "cell_type": "code",
@@ -988,7 +997,7 @@
    ],
    "id": "9fa120b21d361e5e",
    "outputs": [],
-   "execution_count": 20
+   "execution_count": null
   }
  ],
  "metadata": {
