Termin04 ML: Eval Table

--- a/Termin04/adrian/04_Machine_Learning.ipynb
+++ b/Termin04/adrian/04_Machine_Learning.ipynb
@@ -795,8 +795,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-23T17:27:11.830403200Z",
-     "start_time": "2024-06-23T17:24:22.095116100Z"
+     "end_time": "2024-06-23T19:29:26.948805200Z",
+     "start_time": "2024-06-23T19:23:14.097616900Z"
     }
    },
    "cell_type": "code",
@@ -816,11 +816,11 @@
    ],
    "id": "22af731889e7259e",
    "outputs": [],
-   "execution_count": 16
+   "execution_count": 92
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 93,
    "outputs": [
     {
      "name": "stdout",
@@ -829,8 +829,8 @@
       "\n",
       "Modellinformationen:\n",
       "----------------------------------------------------------------------------------\n",
-      "Training Time:              169.72603011131287\n",
-      "Accuracy:                   0.6533\n",
+      "Training Time:              372.80219435691833\n",
+      "Accuracy:                   0.9760\n",
       "Class Weight:               None\n",
       "Classes:                    [0 1 2 3 4 5 6 7 8 9]\n",
       "Random State:               None\n",
@@ -861,7 +861,7 @@
     "Modellinformationen:\n",
     "----------------------------------------------------------------------------------\n",
     "Training Time:              {training_time_svm}\n",
-    "Accuracy:                   {accuracy_rf:.4f}\n",
+    "Accuracy:                   {accuracy_svm:.4f}\n",
     "Class Weight:               {clf_svm.class_weight}\n",
     "Classes:                    {clf_svm.classes_}\n",
     "Random State:               {clf_svm.random_state}\n",
@@ -886,8 +886,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-06-23T17:29:11.681500800Z",
-     "start_time": "2024-06-23T17:27:11.844369200Z"
+     "end_time": "2024-06-23T19:34:00.423106100Z",
+     "start_time": "2024-06-23T19:29:26.968781800Z"
     }
    },
    "id": "4af716d4e4a30e7d"
@@ -1229,16 +1229,6 @@
     }
    ],
    "execution_count": 90
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "68e1e6ac0143b7be"
   }
  ],
  "metadata": {
