--- a/Termin04/adrian/04_Machine_Learning.ipynb
+++ b/Termin04/adrian/04_Machine_Learning.ipynb
@@ -1001,7 +1001,7 @@
    "source": [
     "import tensorflow as tf\n",
     "from keras.src import Sequential\n",
-    "from keras.src.layers import Dense, Flatten\n",
+    "from keras.src.layers import Dense #, Flatten\n",
     "from keras.src.losses import CategoricalCrossentropy\n",
     "from keras.src.optimizers import Adam\n",
     "from keras.src.activations import relu, softmax"
@@ -1397,7 +1397,7 @@
     "\n",
     "Nach der jeweiligen Evaluierung der verschiedenen Modelle wurden die gemessenen Werte (accuracy, training time, inference time) in einer Tabelle gegenübergestellt.\n",
     "Die jeweils größten Werte wurden farblich hervorgehoben. Es ist anzumerken, dass diese Werte durch die Wahl der jeweiligen Hyperparameter der Modelle stark beeinflusst werden.\n",
-    "Insgesamt hat sich in dieser Gesamtauswertung gezeigt, dass die Support Vector Machine die höchste Verlässlichkeit aufweist, jedoch auch deutlich länger trainiert werden muss und in der Inferenz langsamer ist als die anderen Modelle. Auf dem zweiten Platz ist das Sequential Neural Net mit einer ähnlich hohen Genauigkeit, es ist zudem verhältnismäßig das schnellste Modell."
+    "Insgesamt hat sich in dieser Gesamtauswertung gezeigt, dass die Support Vector Machine die höchste Verlässlichkeit aufweist, jedoch auch deutlich länger trainiert werden muss und in der Inferenz langsamer ist als die anderen Modelle. Auf dem zweiten Platz ist das Sequential Neural Net mit einer ähnlich hohen Genauigkeit, es ist zudem verhältnismäßig das schnellste Modell (bei hoher Genauigkeit). "
    ],
    "id": "c53ab00fa6763b67"
   },
