--- a/Termin04/adrian/04_Machine_Learning.ipynb
+++ b/Termin04/adrian/04_Machine_Learning.ipynb
@@ -528,8 +528,7 @@
       " ...\n",
       " [0. 0. 0. ... 0. 0. 0.]\n",
       " [0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]]\n",
-      "\n"
+      " [0. 0. 0. ... 0. 0. 0.]]\n"
      ]
     }
    ],
@@ -673,8 +672,7 @@
       "Min Impurity Decrease:      0.0\n",
       "Splitter:                   best\n",
       "Monotonic cst:              None\n",
-      "Random State:               0\n",
-      "\n"
+      "Random State:               0\n"
      ]
     }
    ],
@@ -799,8 +797,7 @@
       "Min Samples Split:          2\n",
       "Min Impurity Decrease:      0.0\n",
       "Monotonic cst:              None\n",
-      "Random State:               0\n",
-      "\n"
+      "Random State:               0\n"
      ]
     }
    ],
@@ -947,8 +944,7 @@
       "Probability:                False\n",
       "Shrinking:                  True\n",
       "Unused Param:               nu\n",
-      "Decision Function Shape:    ovr\n",
-      "\n"
+      "Decision Function Shape:    ovr\n"
      ]
     }
    ],
@@ -1026,7 +1022,7 @@
     "\n",
     "# Kompilieren des Modells\n",
     "model.compile(optimizer=Adam(),\n",
-    "              loss=CategoricalCrossentropy(),\n",
+    "              loss=CategoricalCrossentropy(), #SparseCatCE\n",
     "              metrics=['accuracy'])\n",
     "\n",
     "# Modellzusammenfassung anzeigen\n",
@@ -1251,8 +1247,7 @@
       "Test Function:              <tensorflow.python.eager.polymorphic_function.polymorphic_function.Function object at 0x00000276948DF530>\n",
       "Train Function:             <tensorflow.python.eager.polymorphic_function.polymorphic_function.Function object at 0x00000276894F1FA0>\n",
       "Predict Function:           <tensorflow.python.eager.polymorphic_function.polymorphic_function.Function object at 0x00000276948DD760>\n",
-      "Optimizer:                  <keras.src.optimizers.adam.Adam object at 0x00000276882E67E0>\n",
-      "\n"
+      "Optimizer:                  <keras.src.optimizers.adam.Adam object at 0x00000276882E67E0>\n"
      ]
     }
    ],
@@ -1406,7 +1401,7 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "",
+   "source": [],
    "id": "1e880f7d2a5ab0d3"
   }
  ],
